@@ -43,6 +43,7 @@ import de.hybris.platform.servicelayer.session.Session;
 import de.hybris.platform.servicelayer.session.SessionService;
 
 import java.io.UnsupportedEncodingException;
+import java.net.URLDecoder;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.LinkedList;
@@ -79,6 +80,7 @@ import com.tisl.mpl.constants.MplConstants;
 import com.tisl.mpl.core.model.PriorityBrandsModel;
 import com.tisl.mpl.core.model.SeoContentModel;
 import com.tisl.mpl.exception.EtailNonBusinessExceptions;
+import com.tisl.mpl.facade.category.MplCategoryFacade;
 import com.tisl.mpl.marketplacecommerceservices.service.MplCmsPageService;
 import com.tisl.mpl.marketplacecommerceservices.service.brand.impl.DefaultBrandService;
 import com.tisl.mpl.storefront.constants.ModelAttributetConstants;
@@ -123,9 +125,12 @@ public class CategoryPageController extends AbstractCategoryPageController
 	@Autowired
 	private ConfigurationService configurationService;
 
-
 	@Resource(name = "brandService")
 	private DefaultBrandService brandService;
+
+	@Autowired
+	private MplCategoryFacade mplCategoryFacade;
+
 
 	//Below Lines Commented as Sonar Fix
 	//Start
@@ -166,8 +171,36 @@ public class CategoryPageController extends AbstractCategoryPageController
 	private static final String CATEGORY_FOOTER_TEXT = "categoryFooterTxt";
 	private static final String SPECIAL_CHARACTERS = "[^\\w\\s]";
 	private int pageSiseCount;
+
+	/* TPR-1283--Starts */
+	private static String categoryUrl;
+
+	/**
+	 * @return the categoryUrl
+	 */
+	public static String getCategoryUrl()
+	{
+		return categoryUrl;
+	}
+
+	/**
+	 * @param categoryUrl
+	 *           the categoryUrl to set
+	 */
+	public static void setCategoryUrl(final String categoryUrl)
+	{
+		CategoryPageController.categoryUrl = categoryUrl;
+	}
+
+	private static final String NEW_BRAND_URL_PATTERN = "/**/c-{categoryCode}/b-{brandCode}";
+	private static final String NEW_BRAND_URL_PATTERN_PAGINATION = "/**/c-{categoryCode}/b-{brandCode}/page-{page}";
+	/* TPR-1283 --Ends */
+
 	//UF-15,16
-	private static final Integer PAGE_SIZE = new Integer(24);
+	//sonar fix
+	//private static final Integer PAGE_SIZE = new Integer(24);
+
+	private static final Integer PAGE_SIZE = Integer.valueOf(24);
 
 	/**
 	 * @return the pageSiseCount
@@ -184,6 +217,269 @@ public class CategoryPageController extends AbstractCategoryPageController
 	public void setPageSiseCount(final int pageSiseCount)
 	{
 		this.pageSiseCount = pageSiseCount;
+	}
+
+	/**
+	 * TPR-1283 CHANGES
+	 *
+	 * @param categoryCode
+	 * @param searchQuery
+	 * @param page
+	 * @param showMode
+	 * @param sortCode
+	 * @param pageSize
+	 * @param dropDownText
+	 * @param model
+	 * @param request
+	 * @param response
+	 * @return String
+	 * @throws UnsupportedEncodingException
+	 * @throws CMSItemNotFoundException
+	 */
+	@RequestMapping(value =
+	{ NEW_BRAND_URL_PATTERN, NEW_BRAND_URL_PATTERN_PAGINATION }, method = RequestMethod.GET)
+	public String brand(@PathVariable(CATERGORYCODE) String categoryCode, @PathVariable("brandCode") String brandCode,
+			@RequestParam(value = "q", required = false) String searchQuery,
+			@RequestParam(value = PAGE, defaultValue = "0") int pageNo,
+			@RequestParam(value = SHOW, defaultValue = PAGEVAl) final ShowMode showMode,
+			@RequestParam(value = SORT, required = false) final String sortCode,
+			@RequestParam(value = "pageSize", required = false) final Integer pageSize,
+			@RequestParam(value = "searchCategory", required = false) String dropDownText,
+			@RequestParam(value = "resetAll", required = false) final boolean resetAll, final Model model,
+			final HttpServletRequest request, final HttpServletResponse response) throws UnsupportedEncodingException,
+			CMSItemNotFoundException
+	{
+		final boolean isBrand = true;
+		if (request.getServletPath().contains("&"))
+		{
+			request.getServletPath().replace("&", "-").replaceAll("\\s", "").toLowerCase();
+		}
+		else
+		{
+			request.getServletPath().replaceAll("\\s", "-").toLowerCase();
+		}
+		categoryCode = categoryCode.toUpperCase();
+		brandCode = brandCode.toUpperCase();
+		if (StringUtils.isNotEmpty(brandCode))
+		{
+			searchQuery = ":relevance:brand:" + brandCode;
+		}
+		String searchCode = new String(categoryCode);
+		//SEO: New pagination detection TISCR 340
+		pageNo = getPaginatedPageNo(request);
+		//applying search filters
+		if (searchQuery != null)
+		{
+			getfilterListCountForSize(searchQuery);
+			model.addAttribute(ModelAttributetConstants.SIZE_COUNT, Integer.valueOf(getfilterListCountForSize(searchQuery)));
+			model.addAttribute(ModelAttributetConstants.SEARCH_QUERY_VALUE, searchQuery);
+		}
+		//TISPRD-2315(checking whether the link has been clicked for pagination)
+		if (checkIfPagination(request) && searchQuery == null)
+		{
+			searchQuery = RELEVANCE;
+		}
+
+		// Get page facets to include in facet field exclude tag
+		final String pageFacets = request.getParameter(PAGE_FACET_DATA);
+
+		//Storing the user preferred search results count
+		updateUserPreferences(pageSize);
+
+		//final List<ProductModel> heroProducts = new ArrayList<ProductModel>();
+		if (StringUtils.isNotEmpty(searchCode) && !(searchCode.substring(0, 5).equals(categoryCode))
+				&& (categoryCode.startsWith(MplConstants.SALES_HIERARCHY_ROOT_CATEGORY_CODE)))
+		{
+			searchCode = searchCode.substring(0, 5);
+
+		}
+		model.addAttribute(ModelAttributetConstants.SEARCH_CODE, searchCode);
+		model.addAttribute(ModelAttributetConstants.IS_CATEGORY_PAGE, Boolean.TRUE);
+		final CategoryModel category = categoryService.getCategoryForCode(categoryCode);
+		//Set the drop down text if the attribute is not empty or null
+		if (dropDownText != null && !dropDownText.isEmpty())
+		//Added For TISPRD-1243
+
+		{
+
+			if (dropDownText.startsWith(DROPDOWN_CATEGORY) || dropDownText.startsWith(DROPDOWN_BRAND))
+
+			{
+				final CategoryModel categoryModel = categoryService.getCategoryForCode(dropDownText);
+
+				if (categoryModel != null)
+				{
+					dropDownText = (StringUtils.isNotEmpty(categoryModel.getName())) ? categoryModel.getName() : dropDownText;
+
+				}
+			}
+			//Added For TISPRD-1243
+			model.addAttribute(ModelAttributetConstants.DROP_DOWN_TEXT, dropDownText);
+
+		}
+		else
+		{
+			final String categoryName = (category == null) ? "" : category.getName();
+			model.addAttribute(ModelAttributetConstants.DROP_DOWN_TEXT, categoryName);
+		}
+		//int count = getSearchPageSize();
+		//Check if there is a landing page for the category
+		try
+		{
+			//final UserPreferencesData preferencesData =
+			updateUserPreferences(pageSize);
+			//			if (preferencesData != null && preferencesData.getPageSize() != null)
+			//			{
+			//				count = preferencesData.getPageSize().intValue();
+			//			}
+
+			if (category != null)
+			{
+
+				final ProductCategorySearchPageData<SearchStateData, ProductData, CategoryData> searchPageData = (ProductCategorySearchPageData<SearchStateData, ProductData, CategoryData>) performSearch(
+						categoryCode, searchQuery, pageNo, showMode, sortCode, getSearchPageSize(), resetAll, pageFacets);
+				//				final String performSearch = performSearchAndGetResultsPage(categoryCode, searchQuery, pageNo, showMode, sortCode,
+				//						model, request, response, "", isBrand);
+
+				//method signature modified for TPR-1283
+				final String performSearch = performSearchAndGetResultsPage(categoryCode, searchQuery, pageNo, showMode, sortCode,
+						model, request, response, "", category, isBrand);
+
+
+				final List<ProductData> normalProductDatas = searchPageData.getResults();
+				model.addAttribute("normalProducts", normalProductDatas);
+
+				//Set department hierarchy
+
+				if (CollectionUtils.isNotEmpty(normalProductDatas))
+				{
+					model.addAttribute(ModelAttributetConstants.DEPARTMENT_HIERARCHY_DATA, searchPageData.getDepartmentHierarchyData());
+					model.addAttribute(ModelAttributetConstants.DEPARTMENTS, searchPageData.getDepartments());
+					model.addAttribute(ModelAttributetConstants.CURRENT_QUERY, searchPageData.getCurrentQuery().getQuery().getValue());
+				}
+
+				final String categoryName = category.getName();
+
+
+				model.addAttribute(WebConstants.BREADCRUMBS_KEY,
+						getSearchBreadcrumbBuilder().getBreadcrumbs(categoryCode, categoryName, false));
+				model.addAttribute("categoryName", categoryName);
+
+				populateModel(model, searchPageData, ShowMode.Page);
+				//	model.addAttribute(ModelAttributetConstants.NORMAL_PRODUCTS, normalProductDatas);
+				model.addAttribute(ModelAttributetConstants.SHOW_CATEGORIES_ONLY, Boolean.FALSE);
+				// TPR-1282: For Category Footer
+				if (null != category.getCategoryFooterText())
+				{
+					model.addAttribute(CATEGORY_FOOTER_TEXT, category.getCategoryFooterText());
+				}
+
+				/* Added for TPR-1283 --Starts */
+				String catName = "";
+				if (StringUtils.isNotEmpty(getCategoryUrl()))
+				{
+					catName = getCategoryUrl();
+				}
+				else
+				{
+					catName = getCategoryModelUrlResolver().resolve(category);
+				}
+				final String newcatName = catName.substring(1, catName.lastIndexOf('/'));
+				model.addAttribute("catName", newcatName);
+				model.addAttribute("catCode", categoryCode.toLowerCase());
+				model.addAttribute("brand", Boolean.valueOf(true));
+				/* Added for TPR-1283 --Ends */
+
+				//update seo details
+				final CategoryModel brandModel = categoryService.getCategoryForCode(brandCode);
+				//final List<SeoContentModel> seoContent = new ArrayList<SeoContentModel>(brandModel.getSeoContents());
+				//meta tags are modified for TPR-1283
+				String metaKeywords = null;
+				String metaDescription = null;
+				String metaTitle = null;
+
+
+				final String brandName = brandModel.getName();
+
+				final String cateName = category.getName();
+
+				metaKeywords = brandName + " " + cateName + ", " + brandName + " " + cateName + " Online" + "," + " Buy " + brandName
+						+ " " + cateName + "," + " Buy " + brandName + " " + cateName + " Online";
+
+				metaDescription = brandName + " " + cateName + " - Shop for " + brandName + " " + cateName
+						+ " Online at best price in India at Tata CLiQ. Choose from wide range of " + cateName + " by " + brandName
+						+ " and get 100% genuine products.";
+
+
+				metaTitle = brandName + " " + cateName + " | Buy " + brandName + " " + cateName + " Online at Tata CLiQ ";
+
+				updatePageTitle(model, metaTitle);
+				setUpMetaData(model, metaKeywords, metaDescription);
+
+
+
+
+				/*
+				 * if (CollectionUtils.isNotEmpty(seoContent)) {
+				 *
+				 * metaKeywords = seoContent.get(seoContent.size() - 1).getSeoMetaKeyword(); metaDescription =
+				 * seoContent.get(seoContent.size() - 1).getSeoMetaDescription(); metaTitle =
+				 * seoContent.get(seoContent.size() - 1).getSeoMetaTitle();
+				 *
+				 *
+				 * setUpMetaDataForSeo(model, metaKeywords,metaDescription, metaTitle); updatePageTitle(model, metaTitle); }
+				 * else {
+				 *
+				 * metaKeywords = MetaSanitizerUtil.sanitizeKeywords(brandModel.getKeywords()); metaDescription =
+				 * MetaSanitizerUtil.sanitizeDescription(brandModel.getDescription());
+				 * updatePageTitle(brandModel,searchPageData.getBreadcrumbs(), model); setUpMetaData(model, metaKeywords,
+				 * metaDescription);
+				 *
+				 * }
+				 */
+
+				//update seo details
+				populateModel(model, searchPageData, ShowMode.Page);
+
+				/* TPR-1283 CHANGES --Starts */
+				//Added for heading change of the PLP of brand facet
+				final String supercatcode = categoryCode.substring(0, 5);
+				if (categoryCode != supercatcode)
+				{
+					final String header = brandName + " " + cateName;
+					model.addAttribute("flag", Boolean.valueOf(true));
+					model.addAttribute("modified_header", header);
+					model.addAttribute("cateName", cateName);
+				}
+
+				if (categoryCode.equals(supercatcode))
+				{
+					response.setStatus(HttpServletResponse.SC_MOVED_PERMANENTLY);
+					final String categName = category.getName();
+					response.setHeader("Location", "/" + categName + "/c-" + categoryCode.toLowerCase());
+				}
+				//set empty for TPR-1283
+				model.addAttribute("otherProducts", "");
+				/* TPR-1283 CHANGES --Ends */
+				return performSearch;
+			}
+		}
+
+		catch (final Exception exception)
+		{
+			ExceptionUtil.etailNonBusinessExceptionHandler(new EtailNonBusinessExceptions(exception,
+					MarketplacecommerceservicesConstants.E0000));
+			try
+			{
+				return frontEndErrorHelper.callNonBusinessError(model, exception.getMessage());
+			}
+			catch (final CMSItemNotFoundException e1)
+			{
+				LOG.error(EXCEPTION_OCCURED + e1);
+			}
+		}
+
+		return getViewForPage(model);
 	}
 
 	/**
@@ -217,6 +513,28 @@ public class CategoryPageController extends AbstractCategoryPageController
 		String searchCode = new String(categoryCode);
 		//SEO: New pagination detection TISCR 340
 		pageNo = getPaginatedPageNo(request);
+
+		//CKD:TPR-250 :Start
+		if (null != searchQuery && searchQuery.contains(MarketplacecommerceservicesConstants.SELLERIDSEARCH))
+		{
+			String sellerId = null;
+			String sellerName = null;
+			try
+			{
+				sellerId = searchQuery.split(MarketplacecommerceservicesConstants.SELLERIDSEARCH, 2)[1].substring(0, 6);
+				sellerName = mplCategoryFacade.getSellerInformationBySellerID(sellerId);
+			}
+			catch (final Exception ex)
+			{
+				LOG.error("CategoryPage-Problem retrieving microsite SellerId / Sellername for left hand facets >>>>>", ex);
+			}
+			model.addAttribute("msiteSellerId", sellerId);
+			model.addAttribute("mSellerID", sellerId);
+			model.addAttribute("mSellerName", sellerName);
+		}
+		//CKD:TPR-250: End
+
+
 		//applying search filters
 		if (searchQuery != null)
 		{
@@ -249,6 +567,20 @@ public class CategoryPageController extends AbstractCategoryPageController
 		//try added for merge
 		{
 			final CategoryModel category = categoryService.getCategoryForCode(categoryCode);
+			/* Added for TPR-1283 --Starts */
+			String catName = "";
+			if (StringUtils.isNotEmpty(getCategoryUrl()))
+			{
+				catName = getCategoryUrl();
+			}
+			else
+			{
+				catName = getCategoryModelUrlResolver().resolve(category);
+			}
+			final String newcatName = catName.substring(1, catName.lastIndexOf('/'));
+			model.addAttribute("catName", newcatName);
+			model.addAttribute("catCode", categoryCode.toLowerCase());
+			/* Added for TPR-1283 --Ends */
 			//Set the drop down text if the attribute is not empty or null
 			if (dropDownText != null && !dropDownText.isEmpty())
 			//Added For TISPRD-1243
@@ -382,22 +714,78 @@ public class CategoryPageController extends AbstractCategoryPageController
 			final HttpServletRequest request, final HttpServletResponse response) throws UnsupportedEncodingException,
 			CMSItemNotFoundException
 	{
+		final boolean isBrand = false;
 		//UF-15
 		pageSize = PAGE_SIZE;
 		categoryCode = categoryCode.toUpperCase();
 		String returnStatement = null;
+		//CKD:TPR-250-Start
+		identifyMicroSellerId(searchQuery, model, request);
+		//CKD:TPR-250-End
 		if (!redirectIfLuxuryCategory(categoryCode, response))
 		{
 			String searchCode = new String(categoryCode);
 			//SEO: New pagination detection TISCR 340
 			pageNo = getPaginatedPageNo(request);
 			//applying search filters
+			/* TPR-1283 Changes --Starts */
+			final CategoryModel category = categoryService.getCategoryForCode(categoryCode);
+			final String urlName = getCategoryModelUrlResolver().resolve(category);
+			final String resolvedcatName = urlName.substring(1, urlName.lastIndexOf('/'));
+			setCategoryUrl(urlName);
+			/* TPR-1283 Changes --Ends */
 			if (searchQuery != null)
 			{
 				getfilterListCountForSize(searchQuery);
 				model.addAttribute(ModelAttributetConstants.SIZE_COUNT, Integer.valueOf(getfilterListCountForSize(searchQuery)));
 				model.addAttribute(ModelAttributetConstants.SEARCH_QUERY_VALUE, searchQuery);
 			}
+			/* TPR-1283 changes --Starts */
+			if (StringUtils.isNotEmpty(searchQuery) && searchQuery.contains("brand"))
+			{
+				final Iterable<String> splitStr = Splitter.on(':').split(searchQuery);
+				final int count = Integer.valueOf(Iterables.frequency(splitStr, "brand")).intValue();
+				if (count == 1)
+				{
+					String brandCode = "";
+					int cnt = 0;
+					final String[] tokens = searchQuery.split(":");
+					for (final String token : tokens)
+					{
+						if (cnt == 1)
+						{
+							brandCode = token;
+							break;
+						}
+						if (token.equals("brand"))
+						{
+							cnt = 1;
+						}
+					}
+					final String brand = categoryService.getCategoryForCode(brandCode).getName().toLowerCase();
+					//brand.toLowerCase();
+					String brandName = "";
+
+					if (brand.contains("&"))
+					{
+						brandName = URLDecoder.decode(brand, "UTF-8").replace("&", "-").replaceAll("\\s", "");
+					}
+					else
+					{
+						brandName = URLDecoder.decode(brand, "UTF-8").replaceAll("\\s", "-");
+					}
+
+					response.setStatus(HttpServletResponse.SC_MOVED_PERMANENTLY);
+					final String appenedName = resolvedcatName + ("-") + brandName;
+					response.setHeader("Location",
+							"/" + appenedName + "/c-" + categoryCode.toLowerCase() + "/b-" + brandCode.toLowerCase());
+					return null;
+				}
+			}
+			model.addAttribute("catName", resolvedcatName);
+			model.addAttribute("catCode", categoryCode.toLowerCase());
+			/* TPR-1283 changes --Ends */
+
 			//TISPRD-2315(checking whether the link has been clicked for pagination)
 			if (checkIfPagination(request) && searchQuery == null)
 			{
@@ -422,10 +810,11 @@ public class CategoryPageController extends AbstractCategoryPageController
 			model.addAttribute(ModelAttributetConstants.SEARCH_CODE, searchCode);
 			model.addAttribute(ModelAttributetConstants.IS_CATEGORY_PAGE, Boolean.TRUE);
 
-			CategoryModel category = null;
+			//CategoryModel category = null;
+
 			try
 			{
-				category = categoryService.getCategoryForCode(categoryCode);
+				//category = categoryService.getCategoryForCode(categoryCode);
 				final ContentPageModel categoryLandingPage = getLandingPageForCategory(category); // CAR-237 moved here for called only Once rather  line # 409 , 469 & 1053 available Code review pt#4
 				//SEO
 				this.getSEOContents(category, model, categoryLandingPage);
@@ -534,7 +923,9 @@ public class CategoryPageController extends AbstractCategoryPageController
 			catch (final CMSItemNotFoundException exp)
 
 			{
-				LOG.debug("************** category method exception " + exp.getMessage());
+
+				LOG.error("************** category method exception " + exp.getMessage());
+
 				//ExceptionUtil.etailNonBusinessExceptionHandler(new EtailNonBusinessExceptions(exp,
 				//MarketplacecommerceservicesConstants.E0000));
 
@@ -546,9 +937,9 @@ public class CategoryPageController extends AbstractCategoryPageController
 						count = preferencesData.getPageSize().intValue();
 						setPageSiseCount(count);
 					}
-
+					//method signature modified for TPR-1283
 					final String performSearch = performSearchAndGetResultsPage(categoryCode, searchQuery, pageNo, showMode, sortCode,
-							model, request, response, pageFacets, category);
+							model, request, response, pageFacets, category, isBrand);
 
 					//UF-15
 					if (null != lazyInterface && lazyInterface.equals("Y"))
@@ -606,6 +997,59 @@ public class CategoryPageController extends AbstractCategoryPageController
 			}
 		}
 		return returnStatement;
+	}
+
+	/**
+	 * @param searchQuery
+	 * @param model
+	 * @param request
+	 */
+	private void identifyMicroSellerId(final String searchQuery, final Model model, final HttpServletRequest request)
+	{
+		final String requestURL = request.getRequestURL().toString();
+		//TPR-4471
+		//		String sellerName = null;
+		String sellerId = null;
+		if (requestURL.matches(MplConstants.MSITE_SLR_SLS_HIERARCHY_URL_PTRN_RGX))
+		{
+			try
+			{
+				sellerId = requestURL.split(MplConstants.MSITE_SLR_SLS_PTRN_PART1, 2)[1].substring(0, 6);
+			}
+			catch (final StringIndexOutOfBoundsException ex)
+			{
+				LOG.error("SellerId should not be less than 6 characters >>>>>", ex);
+			}
+			catch (final Exception ex)
+			{
+				LOG.error("Category Page-Problem retrieving microsite SellerId / Sellername from seller Sales Hierarchy URL >>>>>",
+						ex);
+			}
+		}
+		else if (null != searchQuery && searchQuery.contains(MarketplacecommerceservicesConstants.SELLERIDSEARCH))
+		{
+			try
+			{
+				sellerId = searchQuery.split(MarketplacecommerceservicesConstants.SELLERIDSEARCH, 2)[1].substring(0, 6);
+			}
+			catch (final StringIndexOutOfBoundsException ex)
+			{
+				LOG.error("SellerId should not be less than 6 characters >>>>>", ex);
+			}
+			catch (final Exception ex)
+			{
+				LOG.error("Category Page-Problem retrieving microsite SellerId / Sellername from category carousal URL >>>>>", ex);
+			}
+		}
+		//				if (StringUtils.isNotBlank(sellerId))
+		//				{
+		//					sellerName = mplCategoryFacade.getSellerInformationBySellerID(sellerId);
+		//				}
+
+		model.addAttribute("msiteSellerId", sellerId);
+		model.addAttribute("mSellerID", sellerId);
+		//				model.addAttribute("mSellerName", sellerName);
+
 	}
 
 	/**
@@ -939,21 +1383,24 @@ public class CategoryPageController extends AbstractCategoryPageController
 
 
 
-
+	//method signature modified for TPR-1283
 	protected String performSearchAndGetResultsPage(final String categoryCode, final String searchQuery, final int pgNumbers,
 			final ShowMode showMode, final String sortCode, final Model model, final HttpServletRequest request,
-			final HttpServletResponse response, final String pageFacets, final CategoryModel category)
+			final HttpServletResponse response, final String pageFacets, final CategoryModel category, final boolean isBrand)
 			throws UnsupportedEncodingException
 	{
 		//final CategoryModel category = getCommerceCategoryService().getCategoryForCode(categoryCode); // commented as its sent as method parameter
 
 		/* Changes made for TISLUX-91 starts */
-
-		final String redirection = checkRequestUrl(request, response, getCategoryModelUrlResolver().resolve(category));
-		if (StringUtils.isNotEmpty(redirection))
+		//condition added for TPR-1283
+		if (!isBrand)
 		{
-			return redirection;
+			final String redirection = checkRequestUrl(request, response, getCategoryModelUrlResolver().resolve(category));
+			if (StringUtils.isNotEmpty(redirection))
+			{
+				return redirection;
 
+			}
 		}
 
 		final CategoryPageModel categoryPage = getCategoryPage(category);
@@ -1110,10 +1557,18 @@ public class CategoryPageController extends AbstractCategoryPageController
 		try
 		{
 			//categoryLandingPage = getLandingPageForCategory(category); // CAR -237 not called as categoryLandingPage is already sent and available Code review pt#4
+
 			//			if (categoryLandingPage == null)
 			//			{
 			//				throw new CMSItemNotFoundException("Could not find a landing page for the category" + category.getName());
 			//			}
+
+			//changes for CAR-280
+			//if (categoryLandingPage == null)
+			//{
+			//throw new CMSItemNotFoundException("Could not find a landing page for the category" + category.getName());
+			//}
+
 
 			//(TPR-243) SEO Meta Tags and Titles for Landing Page *: starts
 			seoContentList = category.getSeoContents(); // CAR-235 - added to remove duplicate category.getSeoContents() calls at LIne # 1005 & 1064
