@@ -1,22 +1,27 @@
-/**
- *
- */
 package com.tisl.mpl.commerceservices.order.hook;
 
+
+import de.hybris.platform.category.CategoryService;
+import de.hybris.platform.category.model.CategoryModel;
 import de.hybris.platform.commerceservices.order.hook.CommercePlaceOrderMethodHook;
 import de.hybris.platform.commerceservices.service.data.CommerceCheckoutParameter;
 import de.hybris.platform.commerceservices.service.data.CommerceOrderResult;
 import de.hybris.platform.core.enums.OrderStatus;
+import de.hybris.platform.core.model.LimitedStockPromoInvalidationModel;
 import de.hybris.platform.core.model.order.AbstractOrderEntryModel;
 import de.hybris.platform.core.model.order.OrderEntryModel;
 import de.hybris.platform.core.model.order.OrderModel;
 import de.hybris.platform.core.model.order.payment.CODPaymentInfoModel;
 import de.hybris.platform.core.model.order.price.DiscountModel;
+import de.hybris.platform.core.model.product.ProductModel;
+import de.hybris.platform.core.model.user.AddressModel;
+import de.hybris.platform.core.model.user.CustomerModel;
 import de.hybris.platform.order.AbstractOrderEntryTypeService;
 import de.hybris.platform.order.InvalidCartException;
 import de.hybris.platform.order.OrderService;
 import de.hybris.platform.order.strategies.ordercloning.CloneAbstractOrderStrategy;
 import de.hybris.platform.promotions.model.AbstractPromotionModel;
+import de.hybris.platform.promotions.model.AbstractPromotionRestrictionModel;
 import de.hybris.platform.promotions.model.OrderPromotionModel;
 import de.hybris.platform.promotions.model.ProductPromotionModel;
 import de.hybris.platform.promotions.model.PromotionOrderEntryConsumedModel;
@@ -28,7 +33,6 @@ import de.hybris.platform.voucher.VoucherModelService;
 import de.hybris.platform.voucher.VoucherService;
 import de.hybris.platform.voucher.model.PromotionVoucherModel;
 import de.hybris.platform.voucher.model.VoucherInvalidationModel;
-import de.hybris.platform.voucher.model.VoucherModel;
 
 import java.math.BigDecimal;
 import java.text.DateFormat;
@@ -58,19 +62,24 @@ import org.springframework.beans.factory.annotation.Required;
 
 import com.tisl.mpl.constants.MarketplacecommerceservicesConstants;
 import com.tisl.mpl.constants.clientservice.MarketplacecclientservicesConstants;
+import com.tisl.mpl.core.enums.WalletEnum;
 import com.tisl.mpl.core.model.MplPaymentAuditEntryModel;
 import com.tisl.mpl.core.model.MplPaymentAuditModel;
+import com.tisl.mpl.core.model.MplZoneDeliveryModeValueModel;
 import com.tisl.mpl.core.model.RichAttributeModel;
 import com.tisl.mpl.exception.EtailNonBusinessExceptions;
 import com.tisl.mpl.marketplacecommerceservices.daos.MplOrderDao;
 import com.tisl.mpl.marketplacecommerceservices.service.MplCommerceCartService;
+import com.tisl.mpl.marketplacecommerceservices.service.MplDeliveryCostService;
 import com.tisl.mpl.marketplacecommerceservices.service.MplOrderService;
 import com.tisl.mpl.marketplacecommerceservices.service.MplSellerInformationService;
 import com.tisl.mpl.marketplacecommerceservices.service.MplVoucherService;
 import com.tisl.mpl.marketplacecommerceservices.service.NotifyPaymentGroupMailService;
 import com.tisl.mpl.marketplacecommerceservices.service.RMSVerificationNotificationService;
 import com.tisl.mpl.model.CustomProductBOGOFPromotionModel;
+import com.tisl.mpl.model.EtailLimitedStockRestrictionModel;
 import com.tisl.mpl.model.SellerInformationModel;
+import com.tisl.mpl.util.DiscountUtility;
 import com.tisl.mpl.util.OrderStatusSpecifier;
 
 
@@ -87,27 +96,34 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 	private static final Logger LOG = Logger.getLogger(MplDefaultPlaceOrderCommerceHooks.class);
 	private CloneAbstractOrderStrategy cloneAbstractOrderStrategy;
 
-	@Autowired
+	@Resource
 	private MplSellerInformationService mplSellerInformationService;
 
-	@Autowired
+	@Resource
 	private AbstractOrderEntryTypeService abstractOrderEntryTypeService;
-	@Autowired
+	@Resource
 	private OrderService orderService;
-	@Autowired
+	@Resource
 	private ModelService modelService;
 	//@Autowired
 	//private EventService eventService;
-	@Autowired
+	@Resource
 	private MplOrderDao mplOrderDao;
 
-	@Autowired
+	@Resource
 	private ConfigurationService configurationService;
 
-	@Autowired
+	@Resource
 	private MplCommerceCartService mplCommerceCartService;
 
-	@Autowired
+
+	//	@Autowired
+	//	private MplFraudModelService mplFraudModelService;
+
+	@Resource
+	private CategoryService categoryService;
+
+	@Resource
 	private OrderStatusSpecifier orderStatusSpecifier;
 
 	@Autowired
@@ -122,8 +138,10 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 	@Resource(name = "voucherService")
 	private VoucherService voucherService;
 
-	@Autowired
+	@Resource
 	private MplOrderService mplOrderService;
+	@Resource(name = "mplDeliveryCostService")
+	private MplDeliveryCostService deliveryCostService;
 
 	//	@Autowired
 	//	private MplFraudModelService mplFraudModelService;
@@ -134,10 +152,14 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	@Resource(name = "mplVoucherService")
 	private MplVoucherService mplVoucherService;
+	@Resource(name = "discountUtility")
+	private DiscountUtility discountUtility;
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
+	 * 
+	 * 
 	 * @see
 	 * de.hybris.platform.commerceservices.order.hook.CommercePlaceOrderMethodHook#afterPlaceOrder(de.hybris.platform
 	 * .commerceservices.service.data.CommerceCheckoutParameter,
@@ -159,6 +181,80 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			//				updateFraudModel(orderModel);
 			//
 			//			}
+
+
+
+			//TPR -965 + TPR-4579 starts
+			if (null != orderModel && CollectionUtils.isNotEmpty(orderModel.getAllPromotionResults())
+					&& isLimitedStockPromoExists(orderModel.getAllPromotionResults()))
+			{
+				final List<LimitedStockPromoInvalidationModel> orderInvalidationList = new ArrayList<LimitedStockPromoInvalidationModel>();
+				boolean isCategoryLevelPromo = false;
+
+				for (final AbstractOrderEntryModel orderEntry : orderModel.getEntries())
+				{
+					if (orderEntry.getQualifyingCount().intValue() > 0
+							&& (null != orderEntry.getGiveAway() && !orderEntry.getGiveAway().booleanValue()))
+					{
+						isCategoryLevelPromo = validateCategorySetPromo(orderModel.getAllPromotionResults(),
+								orderEntry.getProductPromoCode());
+
+						final LimitedStockPromoInvalidationModel promoInvalidationModel = (LimitedStockPromoInvalidationModel) getModelService()
+								.create(LimitedStockPromoInvalidationModel.class);
+
+						if (isCategoryLevelPromo)
+						{
+							final String categoryCode = getCatgoryCode(orderModel.getAllPromotionResults(),
+									orderEntry.getProductPromoCode(), orderEntry.getProduct());
+
+							promoInvalidationModel.setProductCode(orderEntry.getProduct().getCode());
+							promoInvalidationModel.setUssid(orderEntry.getSelectedUSSID());
+							promoInvalidationModel.setPromoCode(orderEntry.getProductPromoCode());
+							promoInvalidationModel.setGuid(orderModel.getGuid());
+							promoInvalidationModel.setUsedUpCount(Integer.valueOf(orderEntry.getQualifyingCount().intValue()));
+							promoInvalidationModel.setOrder(orderModel);
+							if (StringUtils.isNotEmpty(categoryCode))
+							{
+								promoInvalidationModel.setCategoryCode(categoryCode);
+							}
+
+							if (null != orderModel.getUser()) // Added for TPR-4331: Customer Count Configuration
+							{
+								final CustomerModel customer = (CustomerModel) orderModel.getUser();
+								if (null != customer && null != customer.getOriginalUid())
+								{
+									promoInvalidationModel.setCustomerID(customer.getOriginalUid());
+								}
+							}
+							orderInvalidationList.add(promoInvalidationModel);
+						}
+						else
+						{
+							promoInvalidationModel.setProductCode(orderEntry.getProduct().getCode());
+							promoInvalidationModel.setUssid(orderEntry.getSelectedUSSID());
+							promoInvalidationModel.setPromoCode(orderEntry.getProductPromoCode());
+							promoInvalidationModel.setGuid(orderModel.getGuid());
+							promoInvalidationModel.setUsedUpCount(Integer.valueOf(orderEntry.getQualifyingCount().intValue()));
+							promoInvalidationModel.setOrder(orderModel);
+
+							if (null != orderModel.getUser()) // Added for TPR-4331: Customer Count Configuration
+							{
+								final CustomerModel customer = (CustomerModel) orderModel.getUser();
+								if (null != customer && null != customer.getOriginalUid())
+								{
+									promoInvalidationModel.setCustomerID(customer.getOriginalUid());
+								}
+							}
+							orderInvalidationList.add(promoInvalidationModel);
+						}
+					}
+				}
+				getModelService().saveAll(orderInvalidationList);
+			}
+
+
+			//TPR -965 + TPR-4579 ends
+
 			if (null != orderModel)
 			{
 				//INC144315079
@@ -171,13 +267,17 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				 * getMplCommerceCartService().generateOrderId(); LOG.debug("Order Sequence Generated:- " +
 				 * orderIdSequence);
 				 * 
+				 * 
 				 * orderModel.setCode(orderIdSequence); } else { LOG.debug("Order Sequence Generation False"); final Random
 				 * rand = new Random(); orderModel.setCode(Integer.toString((rand.nextInt(900000000) + 100000000))); }
 				 */
-				orderModel.setType("Parent");
+				// Removed from Hooks added in PlaceOrderStrategy
+				//orderModel.setType("Parent");
 				if (orderModel.getPaymentInfo() instanceof CODPaymentInfoModel)
 				{
-					LOG.debug("Payment Info COD");
+					LOG.debug("Payment Info and Status saving COD");
+					orderModel.setModeOfOrderPayment(MarketplacecommerceservicesConstants.COD);
+					getModelService().save(orderModel);
 					getOrderStatusSpecifier().setOrderStatus(orderModel, OrderStatus.PAYMENT_SUCCESSFUL);
 				}
 				else
@@ -203,16 +303,12 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				//				}
 				if (CollectionUtils.isNotEmpty(voucherList))
 				{
-					VoucherModel appliedVoucher = null;
-
 					try
 					{
 						final DiscountModel discount = voucherList.get(0);
-
 						if (discount instanceof PromotionVoucherModel)
 						{
 							final PromotionVoucherModel promotionVoucherModel = (PromotionVoucherModel) discount;
-							appliedVoucher = promotionVoucherModel;
 							final VoucherInvalidationModel voucherInvalidationModel = getVoucherModelService()
 									.createVoucherInvalidation(promotionVoucherModel,
 											null != promotionVoucherModel.getVoucherCode() ? promotionVoucherModel.getVoucherCode() : "",
@@ -242,59 +338,11 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 							//							getModelService().save(voucherInvalidationModel);
 						}
 					}
+
 					catch (final Exception e)
 					{
-						final ArrayList<DiscountModel> parentOrderVoucherList = new ArrayList<DiscountModel>(getVoucherService()
-								.getAppliedVouchers(orderModel));
-
-						final VoucherInvalidationModel voucherInvalidation = mplVoucherService.findVoucherInvalidation(appliedVoucher,
-								orderModel.getUser(), orderModel);
-
-						if (CollectionUtils.isEmpty(parentOrderVoucherList) && voucherInvalidation != null) //voucher is NOT attached with order but invalidation exists
-						{
-							LOG.error(
-									"Initially the voucher was applied in "
-											+ orderModel.getCode()
-											+ " , now due to exception it has been removed internally. Hence removing the invalidation. The exception is: ",
-									e);
-
-							getModelService().remove(voucherInvalidation);
-							//getModelService().refresh(voucherInvalidation);
-
-						}
-						else if (CollectionUtils.isNotEmpty(parentOrderVoucherList) && voucherInvalidation == null) //voucher is attached with order but invalidation does not exist
-						{
-							final DiscountModel orderVoucherDisc = parentOrderVoucherList.get(0);
-
-							if (orderVoucherDisc instanceof PromotionVoucherModel)
-							{
-								final PromotionVoucherModel promotionVoucher = (PromotionVoucherModel) orderVoucherDisc;
-								try
-								{
-									LOG.info("Trying to create invalidation again...");
-									//trying to create invalidation again
-									final VoucherInvalidationModel voucherInvalidationModel = getVoucherModelService()
-											.createVoucherInvalidation(promotionVoucher,
-													null != promotionVoucher.getVoucherCode() ? promotionVoucher.getVoucherCode() : "",
-													orderModel);
-									if (StringUtils.isNotEmpty(promotionVoucher.getCode()))
-									{
-										voucherInvalidationModel.setSavedAmount(promotionVoucher.getValue());
-									}
-									getModelService().save(voucherInvalidationModel);
-								}
-								catch (final Exception ex)
-								{
-									LOG.error("Error while creating invalidation when voucher is attached with order for id: "
-											+ orderModel.getCode() + ", hence releasing the voucher from order", ex);
-									//releasing voucher from order if exception occurs
-									getVoucherService().releaseVoucher(promotionVoucher.getVoucherCode(), orderModel);
-									orderModel.setGlobalDiscountValuesInternal(null);
-									getModelService().save(orderModel);
-									getModelService().refresh(orderModel);
-								}
-							}
-						}
+						discountUtility.releaseVoucherAndInvalidation(orderModel);
+						throw e;
 					}
 				}
 			}
@@ -340,9 +388,140 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 	//	}
 
 
+	/**
+	 * @param allPromotionResults
+	 * @param productPromoCode
+	 * @param product
+	 * @return String
+	 */
+	private String getCatgoryCode(final Set<PromotionResultModel> allPromotionResults, final String productPromoCode,
+			final ProductModel product)
+	{
+		String categoryCode = MarketplacecommerceservicesConstants.EMPTY;
+
+		if (CollectionUtils.isNotEmpty(allPromotionResults) && StringUtils.isNotEmpty(productPromoCode))
+		{
+			for (final PromotionResultModel oModel : allPromotionResults)
+			{
+				if (null != oModel.getCertainty() && oModel.getCertainty().floatValue() == 1.00F && null != oModel.getPromotion()
+						&& null != oModel.getPromotion().getCode()
+						&& StringUtils.equalsIgnoreCase(oModel.getPromotion().getCode(), productPromoCode))
+				{
+					if (oModel.getPromotion() instanceof ProductPromotionModel
+							&& CollectionUtils.isNotEmpty(((ProductPromotionModel) oModel.getPromotion()).getCategories()))
+					{
+						categoryCode = getCategoryCode(((ProductPromotionModel) oModel.getPromotion()).getCategories(), product);
+					}
+				}
+			}
+		}
+
+		return categoryCode;
+	}
+
+	/**
+	 * @param categories
+	 * @param product
+	 * @return categoryCode
+	 */
+	private String getCategoryCode(final Collection<CategoryModel> categories, final ProductModel product)
+	{
+		String categoryCode = MarketplacecommerceservicesConstants.EMPTY;
+
+		if (CollectionUtils.isNotEmpty(product.getSupercategories()))
+		{
+			final List<CategoryModel> getCategoryDataList = getSuperCategoryData(product.getSupercategories());
+
+			if (CollectionUtils.isNotEmpty(getCategoryDataList))
+			{
+				for (final CategoryModel productCategory : getCategoryDataList)
+				{
+					for (final CategoryModel promoCategory : categories)
+					{
+						if (StringUtils.equalsIgnoreCase(productCategory.getCode(), promoCategory.getCode()))
+						{
+							categoryCode = productCategory.getCode();
+							break;
+						}
+					}
+				}
+			}
+		}
+
+		return categoryCode;
+	}
+
+
+	/**
+	 * Tree Traversal for Category Promotions
+	 *
+	 * @param supercategories
+	 * @return categoryList
+	 */
+	private List<CategoryModel> getSuperCategoryData(final Collection<CategoryModel> supercategories)
+	{
+		final List<CategoryModel> categoryList = new ArrayList<CategoryModel>();
+		List<CategoryModel> subList = null;
+
+		for (final CategoryModel category : supercategories)
+		{
+			subList = new ArrayList<CategoryModel>(categoryService.getAllSupercategoriesForCategory(category));
+			categoryList.addAll(subList);
+		}
+
+		categoryList.addAll(supercategories);
+
+		return categoryList;
+	}
+
+	/**
+	 * @param allPromotionResults
+	 * @param productPromoCode
+	 * @return boolean
+	 */
+	private boolean validateCategorySetPromo(final Set<PromotionResultModel> allPromotionResults, final String productPromoCode)
+	{
+		boolean flag = false;
+
+		if (CollectionUtils.isNotEmpty(allPromotionResults) && StringUtils.isNotEmpty(productPromoCode))
+		{
+			for (final PromotionResultModel oModel : allPromotionResults)
+			{
+				if (null != oModel.getCertainty() && oModel.getCertainty().floatValue() == 1.00F && null != oModel.getPromotion()
+						&& null != oModel.getPromotion().getCode()
+						&& StringUtils.equalsIgnoreCase(oModel.getPromotion().getCode(), productPromoCode))
+				{
+					flag = checkPromoData(oModel.getPromotion());
+				}
+			}
+		}
+
+		return flag;
+	}
+
+	/**
+	 * Checks for Promotion set up with Category Details
+	 *
+	 * @param promotion
+	 * @return boolean
+	 */
+	private boolean checkPromoData(final AbstractPromotionModel promotion)
+	{
+		boolean flag = false;
+
+		if (CollectionUtils.isNotEmpty(((ProductPromotionModel) promotion).getCategories()))
+		{
+			flag = true;
+		}
+
+		return flag;
+	}
+
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
+	 * 
+	 * 
 	 * @see
 	 * de.hybris.platform.commerceservices.order.hook.CommercePlaceOrderMethodHook#beforePlaceOrder(de.hybris.platform
 	 * .commerceservices.service.data.CommerceCheckoutParameter)
@@ -356,7 +535,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * (non-Javadoc)
-	 *
+	 * 
+	 * 
+	 * 
 	 * @see
 	 * de.hybris.platform.commerceservices.order.hook.CommercePlaceOrderMethodHook#beforeSubmitOrder(de.hybris.platform
 	 * .commerceservices.service.data.CommerceCheckoutParameter,
@@ -370,6 +551,25 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 		//orderModel.setType("Parent");
 		if (StringUtils.isNotEmpty(orderModel.getType()) && PARENT.equalsIgnoreCase(orderModel.getType()))
 		{
+			//Added for third party wallet in case 1st tym order is not placed and tried with a different mode of payment
+			if (null != orderModel.getDeliveryAddress())
+			{
+				final List<AddressModel> deliveryAddreses = new ArrayList<AddressModel>();
+				deliveryAddreses.add(orderModel.getDeliveryAddress());
+				orderModel.setDeliveryAddresses(deliveryAddreses);
+				getModelService().save(orderModel);
+			}
+
+			if (MarketplacecommerceservicesConstants.MRUPEE.equalsIgnoreCase(orderModel.getModeOfOrderPayment()))
+			{
+				orderModel.setIsWallet(WalletEnum.MRUPEE);
+			}
+
+			else
+			{
+				orderModel.setIsWallet(WalletEnum.NONWALLET);
+			}
+
 			final List<OrderModel> orderList = getSubOrders(orderModel);
 
 			//TISPRO-249
@@ -390,7 +590,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			}
 			else
 			{
-				throw new InvalidCartException("Exception while creating Suborder for Parent Order:-  " + orderModel.getCode());
+				throw new InvalidCartException("Exception while creating Suborder for Parent Order:-  Suborder not created"
+						+ orderModel.getCode());
 			}
 
 			//Commented as ordercode creation is handled earlier for TPR-629
@@ -417,7 +618,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			//OrderIssues:-  Code moved to upward
 			//		orderModel.setChildOrders(orderList);
 			//getModelService().save(orderModel);
-			if (orderModel.getPaymentInfo() instanceof CODPaymentInfoModel)
+			if (orderModel.getPaymentInfo() instanceof CODPaymentInfoModel || WalletEnum.MRUPEE.equals(orderModel.getIsWallet()))
 			{
 				getOrderStatusSpecifier().setOrderStatus(orderModel, OrderStatus.PAYMENT_SUCCESSFUL);
 			}
@@ -458,9 +659,13 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * @Desc : Used to set parent transaction id and transaction id mapping Buy A B Get C TISPRO-249
-	 *
+	 * 
+	 * 
+	 * 
 	 * @param subOrderList
-	 *
+	 * 
+	 * 
+	 * 
 	 * @throws Exception
 	 */
 	//OrderIssues:-
@@ -539,8 +744,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 						}
 						else
 						{
-							LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-							throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+							LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+							throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG
+									+ subOrderModel.getCode());
 						}
 					}
 				}
@@ -560,9 +766,13 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * @Desc : Used to populate parent freebie map for BUY A B GET C promotion TISPRO-249
-	 *
+	 * 
+	 * 
+	 * 
 	 * @param subOrderList
-	 *
+	 * 
+	 * 
+	 * 
 	 * @throws Exception
 	 */
 	//OrderIssues:-
@@ -609,8 +819,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			}
 			else
 			{
-				LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-				throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+				LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+				throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 			}
 		}
 		return freebieParentMap;
@@ -691,13 +901,45 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 					LOG.info("Total Cart Level Discount>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>" + totalCartLevelDiscount);
 					sellerOrderList.setTotalDiscounts(Double.valueOf(totalCartLevelDiscount + totalCouponDiscount));
 
-
-					if (null != entryModelList.getCurrDelCharge() && entryModelList.getCurrDelCharge().doubleValue() > 0D)
+					double delCost = 0.0d;
+					if (entryModelList.getPrevDelCharge() != null && entryModelList.getPrevDelCharge().doubleValue() > 0D)
 					{
-						totalDeliveryPrice += entryModelList.getCurrDelCharge().doubleValue();
+						totalDeliveryPrice += entryModelList.getPrevDelCharge().doubleValue();
 					}
 					else
 					{
+
+						final MplZoneDeliveryModeValueModel valueModel = deliveryCostService.getDeliveryCost(entryModelList
+								.getMplDeliveryMode().getDeliveryMode().getCode(), sellerOrderList.getCurrency().getIsocode(),
+								entryModelList.getSelectedUSSID());
+						if (entryModelList.getGiveAway() != null && !entryModelList.getGiveAway().booleanValue())
+						{
+							delCost = (valueModel.getValue().doubleValue() * entryModelList.getQuantity().intValue());
+							totalDeliveryPrice = delCost;
+							entryModelList.setCurrDelCharge(Double.valueOf(delCost));
+						}
+						else
+						{
+							delCost = 0.0d;
+							entryModelList.setCurrDelCharge(Double.valueOf(delCost));
+							totalDeliveryPrice = delCost;
+							LOG.warn("skipping deliveryCost for freebee [" + entryModelList.getSelectedUSSID() + "] due to freebee ");
+						}
+						modelService.save(entryModelList);
+						modelService.refresh(entryModelList);
+
+					}
+					if (entryModelList.getScheduledDeliveryCharge() != null
+							&& entryModelList.getScheduledDeliveryCharge().doubleValue() > 0D)
+
+					{
+						totalDeliveryPrice += entryModelList.getScheduledDeliveryCharge().doubleValue();
+
+					}
+
+					if (totalDeliveryPrice <= 0D)
+					{
+
 						LOG.debug("Delivery charge for the entry is either NULL or Zero");
 					}
 
@@ -734,7 +976,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				//OrderIssues:- refresh added
 				modelService.refresh(sellerOrderList);
 			}
+
 		}
+
 		catch (final ModelSavingException e)
 		{
 			LOG.error(" error occured while calculating subtotal from setSuborderTotalAfterOrderSplitting", e);
@@ -861,8 +1105,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 						}
 						else
 						{
-							LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-							throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+							LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+							throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG
+									+ subOrderModel.getCode());
 						}
 					}
 				}
@@ -940,9 +1185,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 						final CustomProductBOGOFPromotionModel bogoPromotion = (CustomProductBOGOFPromotionModel) executingPromotion;
 						//OrderIssues:- null check added
 						final Integer promotionQualifingCount = null != bogoPromotion.getQualifyingCount() ? bogoPromotion
-								.getQualifyingCount() : new Integer(0);
+								.getQualifyingCount() : Integer.valueOf(0); //SONAR FIX
 						final Integer promotionFreeCount = null != bogoPromotion.getFreeCount() ? bogoPromotion.getFreeCount()
-								: new Integer(0);
+								: Integer.valueOf(0); //SONAR FIX
 						//OrderIssues:-
 						if ((promotionQualifingCount.intValue() - promotionFreeCount.intValue()) > 0)
 						{
@@ -1102,8 +1347,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			}
 			else
 			{
-				LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-				throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+				LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+				throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 			}
 		}
 		return innerList;
@@ -1112,9 +1357,13 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 	/*
 	 * @Desc : this method is used to set freebie items parent transactionid TISUTO-128
-	 *
+	 * 
+	 * 
+	 * 
 	 * @param orderList
-	 *
+	 * 
+	 * 
+	 * 
 	 * @throws EtailNonBusinessExceptions
 	 */
 	// OrderIssues:- InvalidCartException exception throws
@@ -1181,8 +1430,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				}
 				else
 				{
-					LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-					throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+					LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+					throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 				}
 			}
 
@@ -1219,6 +1468,27 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 								if (StringUtils.isNotEmpty(parentTransactionId))
 								{
 									subOrderEntryModel.setParentTransactionID(parentTransactionId);
+									//R2.3 Code Chages bug ID TISRLEE-3197
+									try
+									{
+										final AbstractOrderEntryModel perentEntry = mplOrderService.getEntryModel(parentTransactionId);
+										if (perentEntry != null)
+										{
+											subOrderEntryModel.setSddDateBetween(perentEntry.getSddDateBetween());
+										}
+										subOrderEntryModel.setFulfillmentType(perentEntry.getFulfillmentType());
+										subOrderEntryModel.setFulfillmentTypeP1(perentEntry.getFulfillmentTypeP1());
+										subOrderEntryModel.setFulfillmentTypeP2(perentEntry.getFulfillmentTypeP2());
+										subOrderEntryModel.setFulfillmentMode(perentEntry.getFulfillmentMode());
+									}
+									catch (final Exception exception)
+									{
+										LOG.error("MplDefaultPlaceOrderCommerceHooks:::::" + exception.getMessage());
+									}
+
+
+									//R2.3 Code Changes bug ID TISRLEE-3197
+
 									getModelService().save(subOrderEntryModel);
 									for (final String freebieUssid : associatedItemMap.get(parentUssId))
 									{
@@ -1236,6 +1506,26 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 																&& null != subOrderEntryModel.getGiveAway()
 																&& subOrderEntryModel.getGiveAway().booleanValue())
 														{
+
+															//R2.3 Code Chages bug ID TISRLEE-3197
+															try
+															{
+																final AbstractOrderEntryModel perentEntry = mplOrderService
+																		.getEntryModel(parentTransactionId);
+																if (perentEntry != null)
+																{
+																	subOrderEntryModel2.setSddDateBetween(perentEntry.getSddDateBetween());
+																}
+																subOrderEntryModel.setFulfillmentType(perentEntry.getFulfillmentType());
+																subOrderEntryModel.setFulfillmentTypeP1(perentEntry.getFulfillmentTypeP1());
+																subOrderEntryModel.setFulfillmentTypeP2(perentEntry.getFulfillmentTypeP2());
+																subOrderEntryModel.setFulfillmentMode(perentEntry.getFulfillmentMode());
+															}
+															catch (final Exception exception)
+															{
+																LOG.error("MplDefaultPlaceOrderCommerceHooks:::::" + exception.getMessage());
+															}
+															//R2.3 Code Changes bug ID TISRLEE-3197
 															subOrderEntryModel2.setParentTransactionID(parentTransactionId);
 															getModelService().save(subOrderEntryModel2);
 															break;
@@ -1272,8 +1562,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				}
 				else
 				{
-					LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
-					throw new InvalidCartException("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+					LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
+					throw new InvalidCartException(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 				}
 			}
 		}
@@ -1382,7 +1672,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			}
 			else
 			{
-				LOG.error("No  Entries available for Suborder ID:- " + subOrderModel.getCode());
+				LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + subOrderModel.getCode());
 				throw new InvalidCartException("No  Entries available for parent Order ID:- " + subOrderModel.getCode());
 			}
 		}
@@ -1407,8 +1697,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 		String parentUssid = StringUtils.EMPTY;
 		String ussIdA = StringUtils.EMPTY;
 		//OrderIssues:- Long initialization changed from Null to new Long(0);
-		Long ussIdAQty = new Long(0);
-		Long ussIdBQty = new Long(0);
+		Long ussIdAQty = Long.valueOf(0); //SONAR FIX
+		Long ussIdBQty = Long.valueOf(0); //SONAR FIX
 		String ussIdB = StringUtils.EMPTY;
 		String ussIdADelMod = StringUtils.EMPTY;
 		String ussIdBDelMod = StringUtils.EMPTY;
@@ -1445,7 +1735,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				}
 				else
 				{
-					LOG.error("No  Entries available for Suborder ID:- " + orderModel.getCode());
+					LOG.error(MarketplacecommerceservicesConstants.NOENTRYSUBORDERLOG + orderModel.getCode());
 					throw new InvalidCartException("No  Entries available for parent Order ID:- " + orderModel.getCode());
 				}
 			}
@@ -1622,6 +1912,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			final Map<String, SellerInformationModel> cachedSellerInfoMap, final String sellerId) throws Exception //TISPRD-958
 	{
 		Double deliveryCharge = Double.valueOf(0.0);
+		Double scheduleDeliveryCharge = Double.valueOf(0.0);
 		Double prevDelCharge = Double.valueOf(0.0);
 		final OrderModel clonedSubOrder = getCloneAbstractOrderStrategy().clone(null, null, orderModel, generateSubOrderCode(),
 				OrderModel.class, OrderEntryModel.class);
@@ -1629,7 +1920,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 		LOG.debug("Sub Order Clone:- Suborder ID:- " + null != clonedSubOrder.getCode() ? clonedSubOrder.getCode()
 				: "Sub Order code is empty");
 		//save once only
-		clonedSubOrder.setType("SubOrder");
+		clonedSubOrder.setType(MarketplacecommerceservicesConstants.SUBORDER);
 		clonedSubOrder.setParentReference(orderModel);
 		getModelService().save(clonedSubOrder);
 
@@ -1673,6 +1964,31 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 						deliveryCharge = deliveryCharge.doubleValue() > 0.0 ? Double.valueOf(deliveryCharge.doubleValue()
 								/ abstractOrderEntryModel.getQuantity().intValue()) : deliveryCharge;
 					}
+
+
+					/* R2.3 START */
+					if (null != abstractOrderEntryModel.getScheduledDeliveryCharge())
+					{
+						scheduleDeliveryCharge = abstractOrderEntryModel.getScheduledDeliveryCharge();
+					}
+					LOG.debug(">> Order spliting : before apportoning delivery cost " + deliveryCharge);
+					if (null != abstractOrderEntryModel.getIsBOGOapplied()
+							&& abstractOrderEntryModel.getIsBOGOapplied().booleanValue())
+					{
+						scheduleDeliveryCharge = scheduleDeliveryCharge.doubleValue() > 0.0 ? Double.valueOf(scheduleDeliveryCharge
+
+						.doubleValue() / abstractOrderEntryModel.getQualifyingCount().doubleValue()) : scheduleDeliveryCharge;
+					}
+					else
+					{
+						scheduleDeliveryCharge = scheduleDeliveryCharge.doubleValue() > 0.0 ? Double.valueOf(scheduleDeliveryCharge
+
+						.doubleValue() / abstractOrderEntryModel.getQuantity().intValue()) : scheduleDeliveryCharge;
+					}
+					/* R2.3 END */
+
+
+
 					LOG.debug(">> Order spliting : after apportoning  delivery cost  " + deliveryCharge);
 					//TISEE-5298 -- Prev Delivery Charge
 					prevDelCharge = abstractOrderEntryModel.getPrevDelCharge();
@@ -1731,6 +2047,7 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 									&& abstractOrderEntryModel.getConvenienceChargeApportion() != null
 									&& abstractOrderEntryModel.getTotalProductLevelDisc() != null)
 							{
+
 								//INC144316050
 								//								qualifyingCount = abstractOrderEntryModel.getQualifyingCount().intValue()
 								//										+ abstractOrderEntryModel.getFreeCount().intValue();
@@ -1763,13 +2080,13 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 										* abstractOrderEntryModel.getQualifyingCount().intValue();
 								qualifyingCount = qualifyingCount - bogoCount;
 								createOrderLine(abstractOrderEntryModel, bogoCount, clonedSubOrder, cartApportionValue,
-										productApportionvalue, price, true, qualifyingCount, deliveryCharge, cachedSellerInfoMap, 0, 0,
-										prevDelCharge, couponApportionValue, 0);
+										productApportionvalue, price, true, qualifyingCount, deliveryCharge, scheduleDeliveryCharge,
+										cachedSellerInfoMap, 0, 0, prevDelCharge, couponApportionValue, 0);
 								productApportionvalue = 0;
 							}
 							createOrderLine(abstractOrderEntryModel, qualifyingCount, clonedSubOrder, cartApportionValue,
-									productApportionvalue, price, false, 0, deliveryCharge, cachedSellerInfoMap, bogoCODPrice,
-									bogoCartApportion, prevDelCharge, couponApportionValue, bogoCouponApportion);
+									productApportionvalue, price, false, 0, deliveryCharge, scheduleDeliveryCharge, cachedSellerInfoMap,
+									bogoCODPrice, bogoCartApportion, prevDelCharge, couponApportionValue, bogoCouponApportion);
 
 
 						}
@@ -1812,14 +2129,14 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 
 
 						createOrderLine(abstractOrderEntryModel, quantity, clonedSubOrder, cartApportionValue, 0, price, false, 0,
-								deliveryCharge, cachedSellerInfoMap, 0, 0, prevDelCharge, couponApportionValue, 0);
+								deliveryCharge, scheduleDeliveryCharge, cachedSellerInfoMap, 0, 0, prevDelCharge, couponApportionValue, 0);
 
 					}
 					else
 					{
 						createOrderLine(abstractOrderEntryModel, quantity, clonedSubOrder, 0, 0, abstractOrderEntryModel
-								.getTotalPrice().doubleValue() / quantity, false, 0, deliveryCharge, cachedSellerInfoMap, 0, 0,
-								prevDelCharge, couponApportionValue, 0);
+								.getTotalPrice().doubleValue() / quantity, false, 0, deliveryCharge, scheduleDeliveryCharge,
+								cachedSellerInfoMap, 0, 0, prevDelCharge, couponApportionValue, 0);
 
 					}
 				}
@@ -1889,7 +2206,8 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 	private void createOrderLine(final AbstractOrderEntryModel abstractOrderEntryModel, final int quantity,
 			final OrderModel clonedSubOrder, final double cartApportionValue, final double productApportionvalue,
 			final double price, final boolean isbogo, @SuppressWarnings("unused") final double bogoQualifying,
-			final Double deliveryCharge, final Map<String, SellerInformationModel> cachedSellerInfoMap, final double bogoCODPrice,
+			final Double deliveryCharge, final Double scheduleDeliveryCharge,
+			final Map<String, SellerInformationModel> cachedSellerInfoMap, final double bogoCODPrice,
 			final double bogoCartApportion, final Double prevDelCharge, final double couponApportionValue,
 			final double bogoCouponApportion)
 
@@ -1993,6 +2311,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 			orderEntryModel.setConvenienceChargeApportion(abstractOrderEntryModel.getConvenienceChargeApportion());
 			orderEntryModel.setCurrDelCharge(deliveryCharge);
 			orderEntryModel.setPrevDelCharge(prevDelCharge);
+			// Added in R2.3 START
+			orderEntryModel.setScheduledDeliveryCharge(scheduleDeliveryCharge);
+			// Added In R2.3 END
 
 			LOG.debug("Sub Order Saved in DB:- netAmountAfterAllDisc:- " + netAmountAfterAllDisc);
 
@@ -2015,6 +2336,9 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				//orderEntryModel.setBasePrice(Double.valueOf(0.01));
 				orderEntryModel.setTotalPrice(Double.valueOf(0.01));
 				orderEntryModel.setCurrDelCharge(Double.valueOf(0));
+				/* Added in R2.3 STARt */
+				orderEntryModel.setScheduledDeliveryCharge(Double.valueOf(0));
+				/* Added in R2.3 end */
 			}
 			if (!isbogo && CollectionUtils.isNotEmpty(orderEntryModel.getAssociatedItems())
 					&& !orderEntryModel.getGiveAway().booleanValue())
@@ -2026,7 +2350,60 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 				orderEntryModel.setNetAmountAfterAllDisc(Double.valueOf(Double.parseDouble(df.format(price - bogoCartApportion
 						- productApportionvalue - bogoCouponApportion))));
 				orderEntryModel.setCurrDelCharge(deliveryCharge);
+				orderEntryModel.setScheduledDeliveryCharge(scheduleDeliveryCharge);
 			}
+			// Start Order line  Code for OrderLine
+			if (abstractOrderEntryModel.getEdScheduledDate() != null)
+			{
+				orderEntryModel.setEdScheduledDate(abstractOrderEntryModel.getEdScheduledDate());
+			}
+			if (abstractOrderEntryModel.getTimeSlotFrom() != null)
+			{
+				orderEntryModel.setTimeSlotFrom(abstractOrderEntryModel.getTimeSlotFrom());
+			}
+			if (abstractOrderEntryModel.getTimeSlotTo() != null)
+			{
+				orderEntryModel.setTimeSlotTo(abstractOrderEntryModel.getTimeSlotTo());
+			}
+			if (abstractOrderEntryModel.getIsPrecious() != null)
+			{
+				orderEntryModel.setIsPrecious(abstractOrderEntryModel.getIsPrecious());
+			}
+			if (abstractOrderEntryModel.getIsFragile() != null)
+			{
+				orderEntryModel.setIsFragile(abstractOrderEntryModel.getIsFragile());
+			}
+			if (abstractOrderEntryModel.getFulfillmentMode() != null)
+			{
+				orderEntryModel.setFulfillmentMode(abstractOrderEntryModel.getFulfillmentMode());
+			}
+			if (abstractOrderEntryModel.getFulfillmentType() != null)
+			{
+				orderEntryModel.setFulfillmentType(abstractOrderEntryModel.getFulfillmentType());
+			}
+			if (abstractOrderEntryModel.getFulfillmentTypeP1() != null)
+			{
+				orderEntryModel.setFulfillmentTypeP1(abstractOrderEntryModel.getFulfillmentTypeP1());
+			}
+			if (abstractOrderEntryModel.getFulfillmentTypeP2() != null)
+			{
+				orderEntryModel.setFulfillmentTypeP2(abstractOrderEntryModel.getFulfillmentTypeP2());
+			}
+			if (abstractOrderEntryModel.getReturnStoreId() != null)
+			{
+				orderEntryModel.setReturnStoreId(abstractOrderEntryModel.getReturnStoreId());
+			}
+			if (abstractOrderEntryModel.getExpectedDeliveryDate() != null)
+			{
+				orderEntryModel.setExpectedDeliveryDate(abstractOrderEntryModel.getExpectedDeliveryDate());
+			}
+			/* Added in R2.3 for TISRLEE-2073 start */
+			if (abstractOrderEntryModel.getSddDateBetween() != null)
+			{
+				orderEntryModel.setSddDateBetween(abstractOrderEntryModel.getSddDateBetween());
+			}
+			/* Added in R2.3 for TISRLEE-2073 end */
+			// End Order line  Code for OrderLine
 
 			orderEntryModel = setAdditionalDetails(orderEntryModel);
 
@@ -2061,9 +2438,17 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 					}
 
 					if (null != model.getDeliveryFulfillModes() && StringUtils.isNotEmpty(model.getDeliveryFulfillModes().getCode()))
+
 					{
 						orderEntryModel.setFulfillmentType(model.getDeliveryFulfillModes().getCode());
+
+
 					}
+
+
+
+
+
 				}
 			}
 		}
@@ -2600,6 +2985,36 @@ public class MplDefaultPlaceOrderCommerceHooks implements CommercePlaceOrderMeth
 	public void setrMSVerificationNotificationService(final RMSVerificationNotificationService rMSVerificationNotificationService)
 	{
 		this.rMSVerificationNotificationService = rMSVerificationNotificationService;
+	}
+
+	/**
+	 * Checking or stock level restriction
+	 *
+	 * @param allPromotionResults
+	 * @return isPresent
+	 */
+	private boolean isLimitedStockPromoExists(final Set<PromotionResultModel> allPromotionResults)
+	{
+		boolean isPresent = false;
+		for (final PromotionResultModel promo : allPromotionResults)
+		{
+			for (final AbstractPromotionRestrictionModel restriction : promo.getPromotion().getRestrictions())
+			{
+				if (restriction instanceof EtailLimitedStockRestrictionModel
+						&& null != ((EtailLimitedStockRestrictionModel) restriction).getMaxStock())
+				{
+					final int maxStock = ((EtailLimitedStockRestrictionModel) restriction).getMaxStock().intValue();
+					if (maxStock > 0)
+					{
+						isPresent = true;
+						break;
+					}
+				}
+			}
+
+		}
+		return isPresent;
+
 	}
 
 
